add: appointments doc
